# homie

./: .gitignore  README.md  compose.yml  ecosystem.config.js  package-lock.json
backend/: .dockerignore  .env.example  Dockerfile  config.py  fb_cookies.json  geocoding.py  homie.db  main.py  malaysia_stations.py  places.py  pyproject.toml  requirements.txt  telegram_session.session  transport.py  walking.py
backend/auth/: facebook_session.py
backend/db/: helpers.py
backend/glm/: agent.py  chat_agent.py  client.py  extractor.py  orchestrator.py
backend/glm/tools/: orchestrator_tools.py
backend/models/: db.py
backend/scrapers/: base.py  facebook.py  ibilik.py  iproperty.py  propertyguru.py
backend/scripts/: setup_telegram.py
backend/telegram/: client.py  event_handler.py  outreach_agent.py  phone_lookup.py
backend/tests/: test_gender_extraction.py  test_google_places.py  test_hardening.py  test_telegram_outreach.py
backend/tests/fixtures/: facebook_seed.json  ibilik_seed.json  iproperty_seed.json  propertyguru_seed.json
backend/workflow/: state.py
backend/workflow/stages/: base.py  normalize.py  outreach.py  report.py  score.py  scrape.py  validate.py
frontend/: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AnnotatedText.tsx  ChatFilterSidebar.tsx  FacebookLoginPrompt.tsx  FilterForm.tsx  ListingCard.tsx  ListingMap.tsx  OutreachModal.tsx  PageTransition.tsx  ProgressFeed.tsx  TelegramSetupModal.tsx  (+1 more)
nginx/: nginx.conf
(+18 files in other folders)
