[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "lxml>=5.2.0",
    "playwright>=1.45.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "python-dotenv>=1.0.0",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.0",
    "sse-starlette>=2.1.0",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.50.0",
]
